--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "guava/calendar": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "relaticle/flowforge": "^2.0"
+        "relaticle/flowforge": "^2.0",
+        "spatie/laravel-permission": "^6.23"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
