--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "pestphp/pest": "^4.1"
+        "phpunit/phpunit": "^12.4"
     },
     "autoload": {
         "psr-4": {
@@ -74,7 +74,6 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true,
             "php-http/discovery": true
         }
     },
