fix: used array for catching instead of db

--- a/.env.testing
+++ b/.env.testing
@@ -1,5 +1,5 @@
 APP_NAME=hrm
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=base64:VTBXsvHEQZ0hbDtBFWV6f1k2u19NXdMvtr/o0yC61M4=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -25,7 +25,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=test
 DB_USERNAME=root
-DB_PASSWORD=secret
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -37,7 +37,7 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=array
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
